[FIX] runbot_merge: batch overflow on webkit
Both firefox and chrome worked fine with the old property, but webkit
did not work at all. However reading up more on `line-break` it seems
to be designed for tuning CJK text rendering, so looks like it was the
wrong property all along and it working out was a happy accident.

`word-break: break-word` apparently achieves what I want, and
according to the internet (and docs) `overflow-wrap: anywhere` is the
right property for this, `word-break: break-word` being a
compatibility alias.

Note that `overflow-wrap: break-word` does not work, likely because it
does not affect "min-content intrinsic sizes", which the browsers
likely need to compute column sizes.

Fixes #1355

--- a/runbot_merge/static/src/runbot_merge.css
+++ b/runbot_merge/static/src/runbot_merge.css
@@ -359,7 +359,7 @@ ul.stagings {
             margin: 0;
 
             &>li.batch {
-                line-break: anywhere;
+                overflow-wrap: anywhere;
                 padding: 0 var(--pad1) 0 var(--pad2);
 
                 &:first-child {
